[package]
name = "xxpdump"
version = "0.3.0"
authors = ["RikoNaka <xxy1836@gmail.com>"]
description = "The next generation of traffic capture software"
repository = "https://github.com/rikonaka/xxpdump-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
keywords = ["tcpdump", "traffic", "wireshark"]

[dependencies]
clap = { version="^4", features=["derive"] }
pnet = { version = "^0", features = ["serde"] }
pcapture = { version = "^0", features = ["pcapng"] }
serde = { version = "^1", features = ["derive"]}
bincode = { version = "^2", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }
tracing = "^0"
tracing-subscriber = "^0"
ctrlc = "^3"
chrono = "^0"
anyhow = "^1"
prettytable = "^0"
pcap = { version = "^2", optional = true }
subnetwork = "^0"

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["libpnet"]
libpnet = []
libpcap = ["pcap"]