[package]
name = "xxpdump"
version = "0.4.0"
authors = ["RikoNaka <xxy1836@gmail.com>"]
description = "The next generation of traffic capture software"
repository = "https://github.com/rikonaka/xxpdump-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
keywords = ["tcpdump", "traffic", "wireshark"]

[dependencies]
ctrlc = "^3"
chrono = "^0"
anyhow = "^1"
tracing = "^0"
subnetwork = "^0"
tracing-subscriber = "^0"
clap = { version="^4", features=["derive"] }
pnet = { version = "^0", features = ["serde"] }
pcapture = { path = "../pcapture-rs", version = "^0" }
serde = { version = "^1", features = ["derive"]}
bincode = { version = "^2", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["libpcap"]
libpnet = ["pcapture/pcapng", "pcapture/libpnet"]
libpcap = ["pcapture/pcapng", "pcapture/libpcap"]