[package]
name = "xxpdump"
version = "0.4.5"
authors = ["RikoNaka <xxy1836@gmail.com>"]
description = "The next generation of traffic capture software"
repository = "https://github.com/rikonaka/xxpdump-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
keywords = ["tcpdump", "traffic", "wireshark"]

[dependencies]
ctrlc = "3.5.2"
regex = "1.12.3"
chrono = "0.4.43"
anyhow = "1.0.101"
tracing = "0.1.44"
pcapture = "0.3.22"
tracing-subscriber = "0.3.22"
clap = { version="4.5.58", features=["derive"] }
pnet = { version = "0.35.0", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
bitcode = { version = "0.6.9", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["libpcap"]
libpnet = ["pcapture/pcapng", "pcapture/libpnet"]
libpcap = ["pcapture/pcapng", "pcapture/libpcap"]
